--- a/packages/web/css/reponsivity.css
+++ b/packages/web/css/reponsivity.css
@@ -37,9 +37,23 @@
   }
 }
 
+@media (min-width: 1200px) {
+  main {
+    height: 100%;
+  }
+}
+
 @media (max-width: 800px) {
   html {
     font-size: 62.50%; /* 10px */
+  }
+
+  main {
+    height: auto;
+  }
+
+  main banner {
+    padding: 2rem 5rem;
   }
 
   /* Hamburguer menu */
@@ -61,6 +75,31 @@
   header #menu #user-interactions,
   nav {
     display: none;
+  }
+
+  main section#banner div.wrapper {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+  }
+  
+  main section#banner div.dynamic {
+    margin-left: 0px;
+    margin-top: -30px;
+  }
+
+  main section#banner {
+    padding: 2rem 5rem;
+  }
+  
+  main section#banner div.static,
+  main section#banner div.dynamic li span {
+    font-size: 2rem;
+  }
+
+  main section#content p#about-us-text {
+    padding: 2rem 9rem;
   }
 }
 
